# steller--launchpad-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
contracts/airdrop/: Cargo.toml
contracts/airdrop/src/: lib.rs
contracts/airdrop/test_snapshots/test/: test_add_recipients.1.json  test_add_recipients_exceeds_total.1.json  test_cancel_campaign.1.json  test_claim.1.json  test_claim_twice_fails.1.json  test_create_campaign_unauthorized.1.json  test_create_equal_campaign.1.json  test_distribute_before_start_fails.1.json  test_get_allocation.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json
contracts/launchpad/: Cargo.toml
contracts/launchpad/src/: lib.rs
contracts/launchpad/test_snapshots/test/: test_deactivate_launch.1.json  test_deactivate_launch_unauthorized.1.json  test_get_active_launches.1.json  test_get_all_launches.1.json  test_get_launches_by_creator.1.json  test_initialize.1.json  (+4 more)
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/vesting/: Cargo.toml
contracts/vesting/src/: lib.rs
crates/cli/: Cargo.toml  launch-mtk-testnet.json
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  TROUBLESHOOTING.md  airdrop.md  launchpad.md  token.md  vesting.md
examples/: launch-template.json  recipients.csv  sample-config.toml
scripts/: clean.sh  deploy.sh  format.sh  run-tests.sh  setup-dev.sh
(+22 files in other folders)
