[package]
name = "stellar-launchpad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellar-launchpad"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"